--- a/t7home/res/values/strings.xml
+++ b/t7home/res/values/strings.xml
@@ -4,11 +4,17 @@
     <string name="app_name">t7home</string>
     <string name="app_version">0.7</string>
     <string name="dummy">Dummy</string>
-    <string name="empty"> </string>
-    
+    <string name="empty"></string>
+
     <!-- main/login -->
     <string name="main_about_menu_item">Info</string>
-    <string name="main_info_msg"><![CDATA[<table border="0"><tr><td>Version:</td><td>{0}</tr><tr><td>Date:</td><td>{1}</td></tr><tr><td>Author:</td><td>Thorsten Schenkel</td></tr><tr><td>Homepage:</td><td><a href="http://www.t7soft.de/html/joomla_t7soft/index.php">www.t7soft.de</td></tr></table>]]></string>
-    <string name="hello_world">Hello world!</string>
-
+    <string name="main_info_msg"><![CDATA[<table border="0"><tr><td>Version:</td><td>{0}</tr><tr><td>Datum:</td><td>{1}</td></tr><tr><td>Autor:</td><td>Thorsten Schenkel</td></tr><tr><td>Homepage:</td><td><a href="http://www.t7soft.de/html/joomla_t7soft/index.php">www.t7soft.de</td></tr></table>]]></string>
+    <string name="user_data">Benuterdaten</string>
+    <string name="username_hint">Benutername</string>
+    <string name="password_hint">Passwort</string>
+    <string name="ip_address">IP-Adresse</string>
+    <string name="ip_address_explanation">Durch Drücken der rechten Taste auf der SmartHome Zentrale erfährst Du die IP-Adresse</string>
+    <string name="keep_in_mind">Anmeldedaten merken</string>
+    <string name="logon">Anmelden</string>
+    
 </resources>
