--- a/t7home/res/values/strings.xml
+++ b/t7home/res/values/strings.xml
@@ -8,7 +8,7 @@
 
     <!-- main/login -->
     <string name="main_about_menu_item">Info</string>
-    <string name="main_info_msg"><![CDATA[<table border="0"><tr><td>Version:</td><td>{0}</tr><tr><td>Datum:</td><td>{1}</td></tr><tr><td>Autor:</td><td>Thorsten Schenkel</td></tr><tr><td>Homepage:</td><td><a href="http://www.t7soft.de/html/joomla_t7soft/index.php">www.t7soft.de</td></tr></table>]]></string>
+    <string name="main_info_msg"><![CDATA[<table border="0"><tr><td>Version:</td><td>{0}</tr><tr><td>Datum:</td><td>{1}</td></tr><tr><td>Autor:</td><td>Thorsten Schenkel</td></tr><tr><td>Homepage:</td><td><a href="http://www.t7soft.de/html/joomla_t7soft/index.php">www.t7soft.de</td></tr><tr><td>&nbsp;</td><td>&nbsp;</td></tr><tr><td>third-party:</td><td><a href="https://icons8.com/">Icons8</td></tr><tr><td></td><td><a href="https://code.google.com/p/smarthome-java-library/"><i>smarthome-java-library</i></td></tr><tr><td></td><td><a href="http://commons.apache.org/">Apache Commons</td></tr></table>]]></string>
     <string name="logon_subtitle">Anmeldung</string>
     <string name="user_data">Benutzerdaten</string>
     <string name="username_hint">Benutzername</string>
