--- a/t7home/res/values/strings.xml
+++ b/t7home/res/values/strings.xml
@@ -51,5 +51,6 @@
     <string name="dummy_humidity_value">\?? %</string>
     <string name="preset_temperature_value">Eingestellt Temperatur</string>
     <string name="temperature_mode">Modus</string>
+    <string name="point_temperature_value">TODO</string>
 
 </resources>
